--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## C++ Files and Directories
 # Prerequisites
 *.d
 
@@ -30,3 +31,8 @@
 *.exe
 *.out
 *.app
+
+## Visual Studios Files and Directories
+.vs/
+out/
+CMakeSettings.json
