Changing default branch name from master to main

--- a/cmake/CMakeLists.txt.in
+++ b/cmake/CMakeLists.txt.in
@@ -7,7 +7,7 @@ include(ExternalProject)
 
 ExternalProject_Add(${EXTERN_ARGS_PROJECT}-download
                     GIT_REPOSITORY    ${EXTERN_ARGS_REPOSITORY}
-                    GIT_TAG           master
+                    GIT_TAG           main
                     SOURCE_DIR        "${EXTERN_ARGS_PROJECT}-src"
                     BINARY_DIR        "${EXTERN_ARGS_PROJECT}-build"
                     CONFIGURE_COMMAND ""
